# Gaemi-02

./: .gitignore  CMakeLists.txt  README.md
_old/: .gitignore  CMakeLists.txt
_old/src/engine/: Actor.cpp  CMakeLists.txt  Component.cpp  ResourceManager.cpp  Scene.cpp  Scene.h  SpriteComponent.cpp  Texture2D.cpp  game.h
_old/src/game/: CMakeLists.txt  SceneMain.cpp  SceneMain.h  TestActor.cpp  game.cpp
assets/shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  gradient.comp  gradient_color.comp  sky.comp  sprite.vert
core/: CMakeLists.txt  engine.cpp  engine.h  vk_descriptors.cpp  vk_descriptors.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
game/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/: main.cpp  vk_engine.cpp
src/engine/: Actor.cpp  Actor.h  Component.cpp  Component.h  Game.h  Gamestate.h  ResourceManager.h  Scene.h  SpriteComponent.cpp  SpriteComponent.h  Types.h  VertexArray.cpp  WindowSdl.cpp  game.h
src/game/: Game.cpp  Gamestate_Main.cpp  Gamestate_Main.h  SceneMain.cpp  SceneMain.h  TestActor.cpp  TestActor.h  game.cpp  gamestate_main.cpp  gamestate_main.h
